# CoinGeckoC-

./: CMakeLists.txt
docs/: DESIGN.md
include/: app_state.h  coingecko_client.h  models.h  storage.h  utils.h
src/: app_state.cpp  coingecko_client.cpp  main.cpp  storage.cpp
